# LLM_council

./: .architecture.md  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMPLETION_PLAN.md  Dockerfile  Dockerfile.dev  FOUNDATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_TASKS.md  LLMCouncil-Tray.ps1  LLMCouncil.bat  LLMCouncil.vbs  LuxifySystems.sln  README.md  RELEASE_CHECKLIST.md  claude-progress.txt  docker-compose.prod.yml  docker-compose.yml  features.json  init.ps1  init.sh  install-as-service.bat  luxify_integration_plan.md  openapi.json  openapi.yaml  package-lock.json  package.json  pyproject.toml  start.ps1  uninstall-service.bat
Luxify.Auth.Service/: Luxify.Auth.Service.http
Luxify.Shared/: Class1.cs
Luxify.Sync.Service/: Luxify.Sync.Service.csproj  Luxify.Sync.Service.http
MillworkWorkflow.API/: MillworkWorkflow.API.csproj  MillworkWorkflow.API.http
MillworkWorkflow.Core/: Class1.cs  MillworkWorkflow.Core.csproj
MillworkWorkflow.Data/: Class1.cs  MillworkWorkflow.Data.csproj
backend/: config.py  council.py  health.py  logging_config.py  main.py  metrics.py  openrouter.py  settings.py  startup.py  storage.py
docs/: API.md  ARCHITECTURE.md  BUILD_REVIEW.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEVELOPMENT.md  POSTGRESQL_MIGRATION.md  TECH-STACK.md  USER_GUIDE.md
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
memory-bank/: activeContext.md  progress.md  projectBrief.md
prompts/: self-review-prompt.md
scripts/: backup_db.py  check-ports.ps1  load_test.py  (+7 more)
(+94 files in other folders)
